Develop (#36)
* Feature/api work (#31)

* CompanyPostJobApi

* CompanyPostJobApi2

* CompanyPostJobApi

* CompanyPostJobApi2

* getJobApiOfCompany

* getJobApiOfCompanyComplete

* resolveBug

---------


* Feature/api work (#32)

* CompanyPostJobApi

* CompanyPostJobApi2

* CompanyPostJobApi

* CompanyPostJobApi2

* getJobApiOfCompany

* getJobApiOfCompanyComplete

* resolveBug

* resolveBug2

---------


* Swagger server setup and annotation work (#33)


* api for job detail (#34)

* company annotation added (#35)


---------
